syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 302
// EnetChannelId: 0
// EnetIsReliable: true
message DelTeamEntityNotify {
	uint32 scene_id = 8;
	repeated uint32 del_entity_id_list = 15;
}
